url overflow wrap problem solved

--- a/clearance/main_app/static/css/style.css
+++ b/clearance/main_app/static/css/style.css
@@ -43,6 +43,11 @@ a {
     color: rgb(0, 85, 85);
 }
 
+.card-content {
+    text-overflow: clip;
+    overflow: hidden;
+}
+
 
 .btn {
     border-radius: 5px;
